More style changes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 layout: home
 ---
 
+<p>I graduated from Cornell University in 2018 with a B.A. in biological sciences. I'm currently teaching myself machine learning so that I can use it for my work and start new projects. I hope to start medical school in the fall of 2019.</p>
 
 <div class="row">
   <div class="column left">
