--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 #
 layout: home
 ---
-<img class="display-img" width="100%" src="{{site.baseurl}}/assets/img/durga.jpg">
+<div class="outer-div"><div class="inner-div"></div></div>
 <div class="intro"><p>I graduated from Cornell University in 2018 with a B.A. in biological sciences. I'm currently teaching myself machine learning so that I can use it for my work and start new projects. I hope to start medical school in the fall of 2019.</p>
 {%- if site.posts.size > 0 -%}
 <h2 class="post-list-header">UPDATES</h2>
