local hosted photography page, add photos, add dummy posts

--- a/photos.html
+++ b/photos.html
@@ -1,15 +1,21 @@
 ---
 layout: home
 ---
+<div class="masonry masonry--h">
+  <figure class="masonry-brick masonry-brick--h"><img src="assets/img/palace.jpg" class="masonry-img" alt="Masonry Brick"></figure>
+  <figure class="masonry-brick masonry-brick--h"><img src="assets/img/lady.jpg" class="masonry-img" alt="Masonry Brick"></figure>
+  <figure class="masonry-brick masonry-brick--h"><img src="assets/img/bicycle.jpg" class="masonry-img" alt="Masonry Brick"></figure>
+  <figure class="masonry-brick masonry-brick--h"><img src="assets/img/nyc.jpg" class="masonry-img" alt="Masonry Brick"></figure>
+  <figure class="masonry-brick masonry-brick--h"><img src="assets/img/mudlick.jpg" class="masonry-img" alt="Masonry Brick"></figure>
+  <figure class="masonry-brick masonry-brick--h"><img src="assets/img/waterfall.jpg" class="masonry-img" alt="Masonry Brick"></figure>
+  <figure class="masonry-brick masonry-brick--h"><img src="assets/img/alsomudlick.jpg" class="masonry-img" alt="Masonry Brick"></figure>
+  <figure class="masonry-brick masonry-brick--h"><img src="assets/img/coast.jpg" class="masonry-img" alt="Masonry Brick"></figure>
+  <figure class="masonry-brick masonry-brick--h"><img src="assets/img/bear.jpg" class="masonry-img" alt="Masonry Brick"></figure>
+  <figure class="masonry-brick masonry-brick--h"><img src="assets/img/frog.jpg" class="masonry-img" alt="Masonry Brick"></figure>
+  <figure class="masonry-brick masonry-brick--h"><img src="assets/img/sealion.jpg" class="masonry-img" alt="Masonry Brick"></figure>
+  <figure class="masonry-brick masonry-brick--h"><img src="assets/img/reptile.jpg" class="masonry-img" alt="Masonry Brick"></figure>
+  <figure class="masonry-brick masonry-brick--h"><img src="assets/img/hallway1.jpg" class="masonry-img" alt="Masonry Brick"></figure>
+  <figure class="masonry-brick masonry-brick--h"><img src="assets/img/hallway2.jpg" class="masonry-img" alt="Masonry Brick"></figure>
+  <figure class="masonry-brick masonry-brick--h"><img src="assets/img/mural.jpg" class="masonry-img" alt="Masonry Brick"></figure>
 
-<!-- Place <div> tag where you want the feed to appear -->
-<div id="curator-feed"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
-<!-- The Javascript can be moved to the end of the html page before the </body> tag -->
-<script type="text/javascript">
-/* curator-feed */
-(function(){
-var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
-i.src = "https://cdn.curator.io/published/287b2523-2773-44b1-9a3f-23b26125f952.js";
-e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
-})();
-</script>
+</div>
