--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: home
 {% for post in paginator.posts %}
 <div class="row">
   <div class="column left">
-    {{ post.date | date_to_long_string }}
+    {{ post.date | date_to_string }}
   </div>
   <div class="column right">
     <a href="{{ post.url }}">{{ post.title }}</a>
