--- a/photos.html
+++ b/photos.html
@@ -2,6 +2,7 @@
 layout: home
 ---
 <div class="masonry masonry--h">
+  <figure class="masonry-brick masonry-brick--h"><img src="assets/img/cinqueterre.jpg" class="masonry-img" alt="Masonry Brick"></figure>
   <figure class="masonry-brick masonry-brick--h"><img src="assets/img/palace.jpg" class="masonry-img" alt="Masonry Brick"></figure>
   <figure class="masonry-brick masonry-brick--h"><img src="assets/img/lady.jpg" class="masonry-img" alt="Masonry Brick"></figure>
   <figure class="masonry-brick masonry-brick--h"><img src="assets/img/bicycle.jpg" class="masonry-img" alt="Masonry Brick"></figure>
