--- a/anki/index.html
+++ b/anki/index.html
@@ -11,7 +11,8 @@ html {
 html,
 body {
 	margin: 0;
-	padding: 0;
+	padding: 20px;
+
 }
 @media only screen {
 	body {
@@ -28,7 +29,7 @@ body {
 
 a,
 a.visited {
-	color: inherit;
+	color: black;
 	text-decoration: underline;
 }
 
@@ -49,6 +50,7 @@ h3 {
 .page-title {
 	font-size: 2.5rem;
 	font-weight: 700;
+	padding-top: 10px;
 	margin-top: 0;
 	margin-bottom: 0.75em;
 }
@@ -166,8 +168,8 @@ img {
 
 .table_of_contents-link {
 	text-decoration: none;
-	opacity: 0.7;
-	border-bottom: 1px solid rgba(55, 53, 47, 0.18);
+	opacity: 0.8;
+	border-bottom: 1px solid rgba(55, 53, 47, 0.3);
 }
 
 table,
@@ -408,7 +410,7 @@ blockquote {
 	opacity: 0.5;
 }
 
-.sans { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol"; }
+.sans { font-family: Arial, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol"; }
 .code { font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace; }
 .serif { font-family: Lyon-Text, Georgia, KaiTi, STKaiTi, '华文楷体', KaiTi_GB2312, '楷体_GB2312', serif; }
 .mono { font-family: Nitti, 'Microsoft YaHei', '微软雅黑', monospace; }
