--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <!-- Required meta tags -->
         <meta charset="utf-8">  
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
         <title>Wordle</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">        
         <!-- <link rel="stylesheet" href="style.css"> -->
@@ -30,11 +31,17 @@
                 text-transform: uppercase;
             }
             .badge{
-                height: 35px;
-                width: 35px;
+                height: 60px;
+                width: 40px;
             }
             .enter{
                 width: 60px;
+            }
+            .kbrow{
+                width: 100%;
+                display:inline-block;
+                white-space: nowrap;
+                text-align: center;
             }
         </style>
         </style>
@@ -216,7 +223,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="kbrow row">
                 <div class="col-md">
                     <button onclick="keyPressed(new KeyboardEvent('keydown', {'key': 'q'}))" id= "kbq" class="badge bg-secondary">Q</button>
                     <button onclick="keyPressed(new KeyboardEvent('keydown', {'key': 'w'}))" id= "kbw" class="badge bg-secondary">W</button>
@@ -230,7 +237,7 @@
                     <button onclick="keyPressed(new KeyboardEvent('keydown', {'key': 'p'}))" id= "kbp" class="badge bg-secondary">P</button>
                 </div>
             </div>
-            <div class="row">
+            <div class="kbrow row">
                 <div class="col-md">
                     <button onclick="keyPressed(new KeyboardEvent('keydown', {'key': 'a'}))" id= "kba" class="badge bg-secondary">A</button>
                     <button onclick="keyPressed(new KeyboardEvent('keydown', {'key': 's'}))" id= "kbs" class="badge bg-secondary">S</button>
@@ -243,7 +250,7 @@
                     <button onclick="keyPressed(new KeyboardEvent('keydown', {'key': 'l'}))" id= "kbl" class="badge bg-secondary">L</button>
                 </div>
             </div>
-            <div class="row">
+            <div class="kbrow row">
                 <div class="col-md">
                     <button onclick="keyPressed(new KeyboardEvent('keydown', {'keyCode': 13}))" id= "kbz" class="badge bg-secondary enter">Enter</button>
                     <button onclick="keyPressed(new KeyboardEvent('keydown', {'key': 'z'}))" id= "kbz" class="badge bg-secondary">Z</button>
