--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <style>
             body{
                 background-color: rgb(27, 27, 27);
+                touch-action: manipulation;
             }
             h1{
                 color:rgb(233, 233, 233);
