--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </div>
             <div class="kbrow row">
                 <div class="kb-group">
+                    <button onclick="keyPressed(new KeyboardEvent('keydown', {'keyCode': 37}))" id= "kbarrow1" class="btn btn-secondary arrow"><</button>
                     <button onclick="keyPressed(new KeyboardEvent('keydown', {'key': 'a'}))" id= "kba" class="btn btn-secondary">A</button>
                     <button onclick="keyPressed(new KeyboardEvent('keydown', {'key': 's'}))" id= "kbs" class="btn btn-secondary">S</button>
                     <button onclick="keyPressed(new KeyboardEvent('keydown', {'key': 'd'}))" id= "kbd" class="btn btn-secondary">D</button>
@@ -49,6 +50,7 @@
                     <button onclick="keyPressed(new KeyboardEvent('keydown', {'key': 'j'}))" id= "kbj" class="btn btn-secondary">J</button>
                     <button onclick="keyPressed(new KeyboardEvent('keydown', {'key': 'k'}))" id= "kbk" class="btn btn-secondary">K</button>
                     <button onclick="keyPressed(new KeyboardEvent('keydown', {'key': 'l'}))" id= "kbl" class="btn btn-secondary">L</button>
+                    <button onclick="keyPressed(new KeyboardEvent('keydown', {'keyCode': 39}))" id= "kbarrow2" class="btn btn-secondary arrow">></button>
                 </div>
             </div>
             <div class="kbrow row">
