--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="game" class="container justify-content-center">
             <div class="row logorow">
                 <div class="col-md logo">
-                    <h1>Wurdle.</h1>
+                    <a href="https://durgak.com"><h1>Wurdle.</h1></a>
                 </div>
             </div>
             <div class="row">
