--- a/share.html
+++ b/share.html
@@ -13,7 +13,7 @@
         <div id="game" class="container justify-content-center"></div>
             <div class="row logorow">
                 <div class="col-md logo">
-                    <h1>Wurdle.</h1>
+                    <a href="https://durgak.com"><h1>Wurdle.</h1></a>
                 </div>
             </div>
             <div class="row">
@@ -24,7 +24,7 @@
             </div>
             <div class="row">
                 <div class="col-md">
-                    <p style="color: white;">Hello</p>
+                    <p style="color: rgb(121, 121, 121);"><a href="https://durgak.com">Play the game!</a></p>
                 </div>
             </div>
         </div>
