--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 </div>
             </div>
             </div>
+            <div class="kbplaceholder" ></div>
         </div>
         <p id="gameWon">
             <br><button onClick="shareScore()" class="btn btn-success" id="shareButton">Share</button><br><br>
