--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <p id="gameWon">
             <br><button onClick="shareScore()" class="btn btn-success" id="shareButton">Share</button><br><br>
         </p>
+        </script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
